@@ -3,7 +3,7 @@
 \chapter{\label{appendixa}Grid description examples}
 
 \section{Example of a curvilinear grid description}
-Here is an example for the CDO description of a curvilinear grid.
+Here is an example for the \CDO description of a curvilinear grid.
 xvals/yvals describes the position of the 6x5 quadrilateral grid cells.
 The first 4 values of xbounds/ybounds are the corners of the first grid cell.
 \begin{lstlisting}[frame=single, backgroundcolor=\color{zebg}, basicstyle=\footnotesize]
@@ -46,7 +46,7 @@ ybounds   :   23   26   36   32        26   27   37   36        27   27   37   3
 
 \newpage
 \section{Example description for unstructured grid cells}
-Here is an example of the CDO description for unstructured grid cells.
+Here is an example of the \CDO description for unstructured grid cells.
 xvals/yvals describes the position of 30 independent hexagonal grid cells.
 The first 6 values of xbounds/ybounds are the corners of the first grid cell.
 \begin{lstlisting}[frame=single, backgroundcolor=\color{zebg}, basicstyle=\footnotesize]
