@@ -1,7 +1,7 @@
+\newcommand{\CDO}{{\bfseries\sffamily CDO\ }}
 \newcommand{\cdologo}{\includegraphics{logo/cdo_logo}}
 \vspace*{0mm}
-%{\Large\bf{CDO reference card}}
-{\LARGE\bf{CDO Reference Card}}
+{\LARGE\CDO \bf Reference Card}
 %{\raisebox{-2.5mm}{\scalebox{0.25}{\cdologo}}}{\LARGE\bf{\ Reference Card}}
 
 \setlength{\unitlength}{1in}
@@ -10,7 +10,7 @@
 \put(0,0.0){\line(1,0){3.95}}
 \end{picture}
 \begin{flushright}
-{\small{Climate Data Operators \\ Version 0.9.13 \\ May 2006}}
+{\small{Climate Data Operators \\ Version 1.0.0 \\ June 2006}}
 \end{flushright}
 
 \vspace*{0mm}
