@@ -8,7 +8,7 @@ creating an absolute time axis.
 
 \subsection{Absolute time}
 
-The absolute time axis has the current time to each time step.
+An absolute time axis has the current time to each time step.
 It can be used without knowledge of the calendar.
 This is preferably used by climate models.
 In netCDF files the relative time axis is to be recognized by the 
