@@ -1,6 +1,6 @@
 \section{Usage}
 
-This section descibes how to use CDO.
+This section descibes how to use \CDO.
 The syntax is:
 \begin{verbatim}
    cdo  [Options]  [Operators]
